--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,3 +26,11 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ github.sha }}
             ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
+      - name: Update deployment image tag
+        run: |
+          sed -i "s|image: ${{ secrets.DOCKERHUB_USERNAME }}/myapp:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ github.sha }}|" k8s/deployment.yaml
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add k8s/deployment.yaml
+          git commit -m "ci: update image tag to ${{ github.sha }}"
+          git push      
